<resources>
    <string name="app_name">Canvas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Canvas</string>
    <string name="nav_header_subtitle">mipapadakis@uth.gr</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="unit_inches">inches</string>
    <string name="unit_millimeters">mm</string>
    <string name="unit_pixels">pixels</string>
    <string name="menu_create">New canvas</string>
    <string name="menu_gallery">My Gallery</string>
    <string name="menu_about">About</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_rate">Rate App</string>
    <string name="add">Add</string>
    <string name="create_canvas_image_content_description">CreateCanvasFragment image</string>
    <string name="create_canvas_description">Choose Canvas Size</string>
    <string name="create_canvas_import_title">Choose Picture</string>
    <string name="create_canvas_import_details">Import a picture from your device as your canvas.</string>
    <string name="create_canvas_import_details_2">Click on the image if you want to pick another one.</string>
    <string name="create_canvas_custom_pixel_title">Custom (pixels)</string>
    <string name="create_canvas_custom_title">Custom</string>
    <string name="create_canvas_custom_dpi_in_pixels">Pixels: %s×%s</string>
    <string name="create_canvas_sd_title">SD Size</string>
    <string name="create_canvas_sd_details">540×984</string>
    <string name="create_canvas_hd_title">HD Size</string>
    <string name="create_canvas_hd_details">1080×1968</string>
    <string name="create_canvas_default_1_1_title">1:1</string>
    <string name="create_canvas_default_1_1_details">768×768</string>
    <string name="create_canvas_default_3_4_title">3:4</string>
    <string name="create_canvas_default_3_4_details">768×1024</string>
    <string name="create_canvas_default_9_16_title">9:16</string>
    <string name="create_canvas_default_9_16_details">720×1280</string>
    <string name="create_canvas_A4_title">A4</string>
    <string name="create_canvas_A4_details">1240×1754 (150dpi)</string>
    <string name="error">Error</string>
    <string name="toolbar_button">toolbar button</string>
    <string name="bottom_toolbar_button">bottom toolbar button</string>
    <string name="tools_menu_brush">Brush</string>
    <string name="tools_menu_bucket">Bucket</string>
    <string name="tools_menu_eraser">Eraser</string>
    <string name="tools_menu_eyedropper">Eyedropper</string>
    <string name="tools_menu_select">Select</string>
    <string name="tools_menu_shape">Shape</string>
    <string name="tools_menu_text">Text</string>
    <string name="canvas_menu_layers">Layers</string>
    <string name="canvas_menu_settings">Settings</string>
    <string name="canvas_menu_transform">Transform Canvas</string>
    <string name="canvas_menu_save">Save</string>
    <string name="canvas_menu_share">Share</string>
    <string name="shape_menu_line">Line</string>
    <string name="shape_menu_square">Square</string>
    <string name="shape_menu_rectangle">Rectangle</string>
    <string name="shape_menu_circle">Circle</string>
    <string name="shape_menu_oval">Oval</string>
    <string name="shape_menu_polygon">Polygon</string>
    <string name="shape_menu_triangle">Triangle</string>
    <string name="shape_menu_arrow">Arrow</string>
    <string name="shape_menu_callout">Callout</string>
    <string name="transform_flip_vertically">Vertically</string>
    <string name="transform_flip_horizontally">Horizontally</string>
    <string name="stroke_type_stroke">Stroke</string>
    <string name="stroke_type_fill">Fill</string>
    <string name="layer_card_view_description">Layer card view description</string>
    <string name="layer_option_duplicate">Duplicate</string>
    <string name="layer_option_clear">Clear</string>
    <string name="layer_option_opacity">Opacity</string>
    <string name="layer_option_delete">Delete</string>
    <string name="layer_option_merge">Merge</string>
    <string name="layer_option_bring_to_front">To Front</string>
    <string name="exit_without_save">Exit without saving</string>
    <string name="overwrite">Overwrite</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="save_canvas_title">Save Canvas</string>
    <string name="file_type_jpeg">JPEG (.jpg)</string>
    <string name="file_type_canvas">Canvas (.cv)</string>
    <string name="file_type_png">PNG (.png)</string>
    <string name="file_type_bitmap">Bitmap (.bmp)</string>
    <string name="file_extension_jpeg">jpg</string>
    <string name="file_extension_canvas">cv</string>
    <string name="file_extension_png">png</string>
    <string name="canvas_placeholder_title">Image</string>
    <string name="save_canvas_subtitle"><![CDATA[Choose title & format for your masterpiece!]]></string>
    <string name="wrong_filename_warning"><![CDATA[Characters * . \" ? : / | \\ < > are not allowed.]]></string>
    <string name="thanks">Thanks!</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="about_details">Welcome to Canvas!
        \nEmbrace your inner Picasso and create your masterpieces, using Canvas\' variety of drawing tools. Save them, share them, admire them.
        \n\nAnd remember:
        \nWhenever you see a button or tool whose purpose is not clear, long-press on it. A tip explaining its function will appear on your screen.
        \n\nHave fun!</string>
    <string name="tutorial_dialog_title">Welcome to Canvas!</string>
    <string name="tutorial_dialog_subtitle">A tip to make things easier for you</string>
    <string name="tutorial_dialog_description">Whenever you see a button or tool whose purpose is not clear, long-press on it. A tip explaining its function will appear on your screen.
        \n\nHave fun!</string>
    <string name="canvas_tip_title">Canvas</string>
    <string name="canvas_tip_subtitle">Contains your drawings</string>
    <string name="canvas_tip_description">Tip: Use two fingers to rotate, reposition, or zoom in/out of the canvas.
        \n\nTwo-finger double click resizes the canvas to fit the screen.
        \nTriple-finger single click resets canvas to original size.</string>
    <string name="canvas_background_tip_title">Background</string>
    <string name="canvas_background_tip_subtitle">Some space to move your canvas around</string>
    <string name="canvas_background_tip_description">Tip:\nTap on the background to hide or show the toolbars.</string>
    <string name="toolbar_button_undo_content_description">Undo Button
        /
        /Press this button to undo an action, if possible.</string>
    <string name="toolbar_button_redo_content_description">Redo Button
        /
        /Press this button to redo an action, if possible.</string>
    <string name="toolbar_button_tool_content_description">Tool Button
        /Determines what is drawn on the canvas.
        /Tools:
        \n• Brush: Draw freehand, following your finger gestures
        \n• Eraser: Set drawn pixels transparent
        \n• Bucket: Draw an enclosed area with a solid color
        \n• Eyedropper: Pick a color from the canvas
        \n• Shape: Draw lines, squares, circles, polygons, and more
        \n• Text: Draw text on the canvas </string>
    <string name="toolbar_button_layers_content_description">Layer List
        /Your canvas consists of a list of layers, stacked on each other. The left-most layer in the list is considered the top layer.
        /Functions:
        \n• Change their hierarchy, by long-pressing and rearranging them in the list
        \n• Set a layer visible or hidden
        \n• Add a new layer
        \n• Merge two or more layers together
        \n• Duplicate one or more layers
        \n• Change opacity of one or more layers
        \n• Clear one or more layers
        \n• Delete one or more layers
        \n\nTip: Double tapping on a layer brings it to the front, and deselects all selected layers.</string>
    <string name="toolbar_button_options_content_description">Canvas Options
        /
        /• Transform your canvas
        \n•Save canvas as a file in the app\'s local directory
        \n• Settings</string>
    <string name="property_brush_color_btn_content_description">Brush Color
        /
        /Pick a color using the ARGB format, or just by using the three color bars that determine the Hue, the brightness and saturation, and lastly the color\'s opacity.
        \nThe top-left square is a preview of your new color. Click on it when you have found the your color choice.</string>
    <string name="property_brush_size_btn_content_description">Brush Size
        /Determine the width of your brush
        /The size can range from 1 to 100 pixels.</string>
    <string name="property_brush_type_btn_content_description">Brush Type
        /
        /• The first type is the traditional brush.
        \n• Next is the pencil, used for details, always with the width of 1 pixel.
        \n• Lastly, there is a number of patterns with which you can draw.</string>
    <string name="property_bucket_color_btn_content_description">Bucket Color
        /
        /Pick a color using the ARGB format, or just by using the three color bars that determine the Hue, the brightness and saturation, and lastly the color\'s opacity.
        \n The top-left square is a preview of your new color. Click on it when you have found the your color choice.</string>
    <string name="property_eraser_opacity_btn_content_description">Eraser Opacity
        /Determine the transparency of erased pixels
        /The opacity can range from 0 (transparent) to 255 (opaque).</string>
    <string name="property_eraser_size_btn_content_description">Eraser Size
        /Determine the width of your eraser
        /The size can range from 1 to 100 pixels</string>
    <string name="property_layers_add_btn_content_description">Add layer
        /
        /Create a new, transparent layer. Add it to the top of the list.</string>
    <string name="property_shape_color_btn_content_description">Shape Color
        /
        /Pick a color using the ARGB format, or just by using the three color bars that determine the Hue, the brightness and saturation, and lastly the color\'s opacity.
        \n The top-left square is a preview of your new color. Click on it when you have found the your color choice.</string>
    <string name="property_shape_size_btn_content_description">Stroke Size
        /Determine the width of your shapes\' edges
        /The size can range from 1 to 100 pixels.</string>
    <string name="property_shape_type_btn_content_description">Shape type
        /
        /You can draw:
        \n• Line
        \n• Square
        \n• Rectangle
        \n• Circle
        \n• Oval
        \n• Polygon</string>
    <string name="property_shape_fill_btn_content_description">Shape Fill
        /
        /Choose between drawing your shapes filled or just their edges.</string>
    <string name="property_transform_flip_horizontally_btn_content_description">Flip Horizontally
        /
        /Note that the flipping occurs on the top layer only.</string>
    <string name="property_transform_flip_vertically_btn_content_description">Flip Vertically
        /
        /Note that the flipping occurs on the top layer only.</string>
</resources>