<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/shape_line"
            android:icon="@drawable/baseline_show_chart_black_18"
            android:title="@string/shape_menu_line" />
        <item
            android:id="@+id/shape_square"
            android:icon="@drawable/baseline_check_box_outline_blank_black_18"
            android:title="@string/shape_menu_square" />
        <item
            android:id="@+id/shape_rectangle"
            android:icon="@drawable/baseline_crop_16_9_black_18"
            android:title="@string/shape_menu_rectangle" />
        <item
            android:id="@+id/shape_circle"
            android:icon="@drawable/baseline_panorama_fish_eye_black_18"
            android:title="@string/shape_menu_circle" />
        <item
            android:id="@+id/shape_oval"
            android:icon="@drawable/oval"
            android:title="@string/shape_menu_oval" />
        <item
            android:id="@+id/shape_polygon"
            android:icon="@drawable/baseline_star_outline_black_18"
            android:title="@string/shape_menu_polygon" />
        <item
            android:id="@+id/shape_triangle"
            android:icon="@drawable/baseline_change_history_black_18"
            android:title="@string/shape_menu_triangle" />
        <item
            android:id="@+id/shape_arrow"
            android:icon="@drawable/baseline_east_black_18"
            android:title="@string/shape_menu_arrow" />
        <item
            android:id="@+id/shape_callout"
            android:icon="@drawable/baseline_chat_bubble_outline_black_18"
            android:title="@string/shape_menu_callout" />
    </group>
</menu>