<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/tool_brush"
            android:icon="@drawable/brush_outlined"
            android:title="@string/tools_menu_brush" />
        <item
            android:id="@+id/tool_eraser"
            android:icon="@drawable/eraser_outlined"
            android:title="@string/tools_menu_eraser"/>
        <item
            android:id="@+id/tool_bucket"
            android:icon="@drawable/bucket_outlined"
            android:title="@string/tools_menu_bucket" />
        <item
            android:id="@+id/tool_eyedropper"
            android:icon="@drawable/eyedropper_outlined"
            android:title="@string/tools_menu_eyedropper" />
        <item
            android:id="@+id/tool_select"
            android:icon="@drawable/select_rectangular"
            android:title="@string/tools_menu_select"
            android:visible="false"/>
        <item
            android:id="@+id/tool_shape"
            android:icon="@drawable/check_box_empty_outlined"
            android:title="@string/tools_menu_shape" />
        <item
            android:id="@+id/tool_text"
            android:icon="@drawable/text_outlined"
            android:title="@string/tools_menu_text" />
    </group>
</menu>