<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/layer_option_to_front"
            android:icon="@drawable/line_outlined"
            android:title="@string/layer_option_bring_to_front" />
        <item
            android:id="@+id/layer_option_merge"
            android:icon="@drawable/line_outlined"
            android:title="@string/layer_option_merge" />
        <item
            android:id="@+id/layer_option_duplicate"
            android:icon="@drawable/line_outlined"
            android:title="@string/layer_option_duplicate" />
        <item
            android:id="@+id/layer_option_opacity"
            android:icon="@drawable/circle_outlined"
            android:title="@string/layer_option_opacity" />
        <item
            android:id="@+id/layer_option_clear"
            android:icon="@drawable/check_box_empty_outlined"
            android:title="@string/layer_option_clear" />
        <item
            android:id="@+id/layer_option_delete"
            android:icon="@drawable/rectangle_outlined"
            android:title="@string/layer_option_delete" />
    </group>
</menu>