<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/nav_group_canvas"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/collections_outlined"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_canvas"
            android:icon="@drawable/brush_outlined"
            android:title="@string/menu_create" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/info_black_48"
            android:title="@string/menu_about" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/feedback_outlined"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/star_outlined"
            android:title="@string/menu_rate" />
    </group>
</menu>

