<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_gallery">

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.mipapadakis.canvas.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_canvas"
        android:name="com.mipapadakis.canvas.ui.create_canvas.CreateCanvasFragment"
        android:label="@string/menu_create"
        tools:layout="@layout/fragment_create_canvas" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.mipapadakis.canvas.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>