<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="Insert title"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/dialog_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="subtitle"
        android:textSize="14sp"
        android:alpha="0.6"/>

    <EditText
        android:id="@+id/input_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/title"
        android:inputType="textCapSentences|text"
        android:lines="1"
        android:imeOptions="actionDone"
        android:textColorHint="#89C3C3C3"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/middle_divider"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginBottom="10dp"
        android:background="?attr/colorPrimaryVariant"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/dialog_file_name_exists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:text="File name already exists!"
        android:visibility="gone"/>

    <RadioGroup
        android:id="@+id/dialog_fileType_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/dialog_fileType_canvas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:checked="true"
            android:text="@string/file_type_canvas"/>
        <RadioButton
            android:id="@+id/dialog_fileType_png"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/file_type_png"/>
        <RadioButton
            android:id="@+id/dialog_fileType_jpeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/file_type_jpeg"/>
    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:visibility="gone">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/black"/>
    </LinearLayout>
</LinearLayout>